--- a/styles/globals.css
+++ b/styles/globals.css
@@ -185,3 +185,15 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #04bd79;
 }
+
+.App {
+  font-family: sans-serif;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
